--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,6 @@
 <h2><%= @task.title %></h2>
+<%= link_to "Edit task", edit_task_path %>
+
 <p><%= @task.details %></p>
 <p><%= @task.completed %></p>
 
