--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,7 +2,7 @@
 <%= link_to "Edit task", edit_task_path %>
 
 <p><%= @task.details %></p>
-<p><%= @task.completed %></p>
+<p><%= @task.completed ? "Task completed" : "Task still open" %></p>
 
 
 <%= link_to("Back to list", "/tasks") %>
